# sot-manager

./: Cargo.toml  example.md
src/: main.rs
tests/sources/: ssh.rhai  ssh.schema.json
